# SusoRewards-Backend

./: .gitignore  README.md  sonar-project.properties
.github/workflows/: sonar.yml
.scannerwork/: report-task.txt
afiliados/: .env.example  package.json  pnpm-lock.yaml  vitest.config.ts
afiliados/src/: index.ts
afiliados/src/application/: README.md
afiliados/src/application/use-cases/: ChangePassword.ts  ManageCliente.ts  ManagePrograma.ts  ManageRestaurante.ts  RegisterEmpresa.ts  RegisterVenta.ts  UniversalLogin.ts
afiliados/src/domain/: README.md
afiliados/src/domain/entities/: Cliente.ts  Empresa.ts  Restaurante.ts
afiliados/src/domain/events/: IEventPublisher.ts
afiliados/src/domain/repositories/: IClienteRepository.ts  (+2 more)
afiliados/tests/: afiliados.test.ts  cobertura.test.ts  infra.test.ts  mocks.ts  server.test.ts
notificaciones/: .env.example  Cargo.toml
notificaciones/src/: dominio.rs  infraestructura.rs  main.rs
notificaciones/src/aplicacion/: casos_de_uso.rs
notificaciones/src/dominio/: entidades.rs  repositorios.rs
notificaciones/src/infraestructura/: cache.rs  config.rs  kafka.rs  web.rs
notificaciones/tests/: notificaciones_tests.rs
recompensas/: .env.example  Cargo.toml
recompensas/src/: aplicacion.rs  dominio.rs  infraestructura.rs  main.rs
recompensas/src/aplicacion/: casos_de_uso.rs
recompensas/src/dominio/: entidades.rs  eventos.rs  repositorios.rs
recompensas/src/infraestructura/: config.rs  database.rs  kafka.rs  web.rs
recompensas/tests/: recompensas_tests.rs
skills/: backend-context.md
(+18 files in other folders)
